--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "serve": "nodemon ./server.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
@@ -30,12 +31,17 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.11",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
